<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Binocle</string>
    <string name="title_apicall_detail">ApiCall Detail</string>
    <string name="menu_refresh">Refresh</string>

    <!-- battery labels -->
    <string name="battery_warning">Warning! there is less than 10% power left!</string>
    <string name="battery_explain">This activity will display a warning if the device is not plugged and if there is less than 10percent power left in battery.</string>

    <!-- gps labels -->
    <string name="gps_warning">The force is strong here, as Dalvik is near.</string>
    <string name="gps_explain">This activity will display a warning if the device is localised near (100 km) Dalvik.</string>
    <string name="gps_currentLat">Current latitude is %f</string>
    <string name="gps_currentLng">Current longitude is %f</string>
    <string name="gps_currentAltitude">Current altitude is %f</string>
    <string name="gps_currentBearing">Current bearing is %f</string>
    <string name="gps_currentAccuracy">Current accuracy is %f</string>
    <string name="gps_distanceToDalvik">Dalvik is %d km away</string>

    <!-- radio labels -->
    <string name="radio_device_type">Your device is recognized as a: %s</string>
    <string name="radio_device_imei">Your device imei is: %s</string>

    <!-- id labels -->
    <string name="android_id">Secret file can only be decoded on the device it has been created on. Current ANDROID_ID is %s.</string>
    <string name="encode">Encrypt secret</string>
    <string name="decode">Decrypt secret</string>
    <string name="encoding_done">Secret have been encrypted on disk using ANDROID_ID. Current ANDROID_ID is %s.</string>
    <string name="encoding_failed">An error occurred when encrypting secret!</string>
    <string name="decoding_done">Secret have been correctly decrypted from disk! secret message was:\n %s</string>
    <string name="decoding_failed">An error occurred when decrypting secret!</string>

    <!-- phone labels -->
    <string name="phone_explain">This activity is waiting for an activation code over SMS. To activate it, you need to send
        an SMS containing the string "666".</string>
    <string name="phone_waiting">Waiting for SMS with activation code…</string>
    <string name="phone_received">SMS received, activation code is valid!</string>
    <string name="phone_activation_picto_desc">Validation SMS received</string>
    <string name="bench">Bench</string>

</resources>
