<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.genymotion.binocle.GpsSampleFragment"
              android:orientation="vertical"
              android:padding="10dp">

    <TextView
        android:id="@+id/tv_gpsWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gps_warning"
        style="@style/warning"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_explain"
        />

    <TextView
        android:id="@+id/tv_gpsCurrentLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_currentLat"
        />

    <TextView
        android:id="@+id/tv_gpsCurrentLng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_currentLng"
        />

    <TextView
        android:id="@+id/tv_gpsDistanceToDalvik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_distanceToDalvik"
        />


</LinearLayout>